--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  text-decoration: none;
+  list-style: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+html {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
+
+body {
+  margin: 0 auto;
+  max-width: 1920px;
+  height: 100%;
+  /* font-family: 'EB Garamond', serif; */
+/* font-family: 'Mulish', sans-serif; */
+  background-color: #f7f7f7;
+}
+
+.container {
+  height: 100%;
+  max-width: 1720px;
+  margin: 0 auto;
 }
