--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body {
   height: 100%;
   /* font-family: 'EB Garamond', serif; */
 /* font-family: 'Mulish', sans-serif; */
-  background-color: #f7f7f7;
+  background-color: #ffff;
 }
 
 .container {
