--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,9 +1,9 @@
 .footer {
   width: 100%;
   height: 301px;
+  margin-top: 200px;
   background-color: #000;
-  position: absolute;
-  bottom: 0;
+
   .container {
     .footer__wrapper {
       width: 100%;
