--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,12 @@
 .header {
+  top: 0;
+  left: 0;
   width: 100%;
   height: 120px;
+  z-index: 111;
+  position: fixed;
+  background-color: #fff;
+
   .container {
     .header__container {
       width: 100%;
