--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -28,6 +28,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        // border: 1px solid black;
 
         .menu__link {
           text-decoration: none;
@@ -36,6 +37,17 @@
           font-size: 1.25em;
           color: #000;
           line-height: 28px;
+          height: 100%;
+          display: flex;
+          padding: 0 5px;
+          align-items: center;
+          border-radius: 12px;
+
+          &:hover {
+            transition: all 0.5s ease-in-out;
+            background-color: #000;
+            color: #fff;
+          }
         }
       }
     }
