--- a/src/pages/Home/components/Banner/Banner.scss
+++ b/src/pages/Home/components/Banner/Banner.scss
@@ -57,6 +57,7 @@
             height: 10%;
             display: flex;
             align-items: center;
+            margin-top: 50px;
 
             .banner__btn {
               width: 220px;
@@ -116,7 +117,7 @@
             .banner__right-item__card-i1 {
               width: 100%;
               height: 100%;
-              background-color: lightblue;
+              background-color: #ebf3ff;
               border-radius: 0 120px 0 0;
               border: 1px solid black;
               display: flex;
